refactor: apply delete-draining review suggestions
Address review feedback on the draining-deletion delete path:

- Stamp resource type/id/tenant before the not-ACTIVE bail-out in
  tryDeleteProcessDefinition, so a repeated delete of a draining
  definition rejects with the resolved metadata instead of whatever
  the client sent.
- Collapse the two finalizedImmediately branches: skip the draining
  gauge entirely when the definition finalizes in the same command,
  since incrementing then decrementing is a net-zero no-op.
- Return Optional<DeployedProcess> from findLatestActiveVersionBelow
  instead of a nullable reference.
- Assert the deployment partition's DRAINING event records every
  partition to drain (drainPartitions) in the multi-partition test.
- Assert the redeployed resource is byte-identical to the draining
  version in the mint-new-version test.
- Add shouldPopulateResourceMetadataOnRejectedDeleteWhileDraining...
  and drop the redundant withResourceType from the draining
  repeated-delete test so the processor stamping is exercised.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>
(cherry picked from commit ab1ea76349650067be90e0b88317ef8c18c1b226)